Fix footer and overflow-x on dashboard.

--- a/web/assets/css/site.css
+++ b/web/assets/css/site.css
@@ -1,4 +1,5 @@
 html {
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   background: #a62529; }
@@ -16,14 +17,13 @@ main {
 nav {
   padding: 0;
   margin: 0;
-  background-color: black;
   display: flex; }
 
 footer {
   display: flex;
   justify-content: flex-end;
   flex-flow: column;
-  height: 5em;
+  height: 2em;
   background-color: black;
   position: relative; }
 
@@ -33,7 +33,7 @@ nav ul {
   font-size: 2.5em;
   padding-left: 0;
   margin: 0;
-  background-color: #0f3650;
+  background-color: rgba(15,54,80,0.50);
   display: flex;
   flex-flow: row;
   justify-content: space-between;
@@ -54,6 +54,7 @@ nav ul li a:active, nav ul li a:hover {
 .credits {
   color: grey;
   font-size: 1em;
+  margin-bottom: 0.5em;
   text-align: center; }
 
 .credits a {
